# SoftRenderer

./: CMakeLists.txt  imgui.ini
src/: CMakeLists.txt  main.cpp
src/core/: bounds.hpp  bvh.hpp  define.hpp  framebuffer.cpp  framebuffer.hpp  hizbuffer.cpp  hizbuffer.hpp  model.cpp  model.hpp  quadnode.hpp  renderer.cpp  renderer.hpp  scanlinezbuffer.cpp  scanlinezbuffer.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  triangle.hpp  trianglemesh.cpp  trianglemesh.hpp  vertex.cpp  vertex.hpp  window.cpp  window.hpp  zbuffer.cpp  zbuffer.hpp
src/utils/: mathutil.cpp  mathutil.hpp
文档/: 说明文档.docx
